# whisper

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/api/: transcribe.py
backend/src/models/: audio_request.py
backend/src/services/: whisper.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: FileSelector.vue
frontend/src/pages/: HomePage.vue
nginx/: nginx.conf
