[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "hrk17"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.48.2,<5.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "sox (>=1.5.0,<2.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"